fix padding on top and bottom for header. no need for padding, align-items take care

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -19,7 +19,7 @@ a {
   font-size: 32px;
   display: flex;
   align-items: center;
-  padding: 16px;
+  padding: 0 16px;
 }
 
 .content {
